--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^8.6.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-bootstrap-drawer": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
